--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 quizapp/main_app/migrations/__pycache__/*
 quizapp/quizapp/__pycache__/*
 quizapp/main_app/__pycache__/*
+quizapp/main_app/migrations
